// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute csv endpoint should return error for invalid matcher column 1`] = `
{
  "errorMessage": "CSV file does not contain column header Invalid",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 0,
    "providerDataRequestedUnixMs": 0,
  },
}
`;

exports[`execute csv endpoint should return error for invalid matcher value 1`] = `
{
  "errorMessage": "CSV file does not contain row where Name == Invalid",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 0,
    "providerDataRequestedUnixMs": 0,
  },
}
`;

exports[`execute csv endpoint should return error for invalid result column 1`] = `
{
  "errorMessage": "CSV file does not contain column header Invalid",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 0,
    "providerDataRequestedUnixMs": 0,
  },
}
`;

exports[`execute csv endpoint should return error for unrecognised bucket 1`] = `
{
  "errorMessage": "Failed to get file from S3: Error: Error: The specified bucket does not exist.",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 0,
    "providerDataRequestedUnixMs": 0,
  },
}
`;

exports[`execute csv endpoint should return error for unrecognised file path 1`] = `
{
  "errorMessage": "Failed to get file from S3: Error: Error: The specified key does not exist.",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 0,
    "providerDataRequestedUnixMs": 0,
  },
}
`;

exports[`execute csv endpoint should return success 1`] = `
{
  "data": {
    "result": 456,
  },
  "result": 456,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;
